--- a/assets/newsletter-section.css
+++ b/assets/newsletter-section.css
@@ -34,7 +34,7 @@
 
 .newsletter__text + div {
   width: 44%;
-  margin-top: 6rem;
+  margin-top: 5rem;
 }
 
 .newsletter__wrapper .newsletter-form__field-wrapper {
@@ -66,10 +66,19 @@
   font-size: 14px;
 }
 
+.newsletter__subheading * {
+  font-size: 14px !important;
+  font-weight: 500;
+}
+
 .newsletter__txt {
   font-size: 11px;
   margin-top: 20px;
   padding-right: 6rem;
+}
+
+.newsletter__txt * {
+  font-size: 11px !important;
 }
 
 .newsletter__policy {
@@ -91,7 +100,7 @@
   position: absolute;
   width: 14px;
   height: 14px;
-  top: 0;
+  top: 2px;
   left: 0px;
   border: 1px solid black;
   background-color: white;
@@ -112,6 +121,7 @@
   padding-left: 2rem;
   cursor: pointer;
   line-height: 16px;
+  font-size: 11px;
 }
 
 .newsletter-form, .newsletter__wrapper .newsletter-form__field-wrapper {
