--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -487,3 +487,23 @@
 .banner-swiper-pagination .swiper-pagination-bullet-active {
   opacity: 1;
 }
+
+@media (max-width: 749px) {
+  .image-banner .link {
+    font-size: 12px;
+  }
+}
+
+.banner__text {
+  font-size: 14px;
+}
+
+.slideshow .banner__text {
+  font-size: 16px;
+}
+
+@media (max-width: 749px) {
+  .slideshow .banner__text {
+    font-size: 14px;
+  }
+}
