--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -68,6 +68,7 @@
 .multicolumn-list h3 {
   line-height: calc(1 + 0.5 / max(1, var(--font-heading-scale)));
   font-size: 32px;
+  letter-spacing: -0.33px;
 }
 
 .multicolumn-list .rte p {
@@ -217,7 +218,6 @@
 }
 
 .multicolumn-card__info .link {
-  text-decoration: none;
   font-size: 14px;
   margin-top: 1.5rem;
 }
@@ -260,5 +260,9 @@
 
   .multicolumn .slider-button[disabled] .icon {
     color: rgb(255, 255, 255, 0.3);
+  }
+
+  .multicolumn-card__info .link {
+    font-size: 12px;
   }
 }
