--- a/assets/fonts.css.liquid
+++ b/assets/fonts.css.liquid
@@ -1,43 +1,63 @@
 @font-face {
-    font-family: 'Montserrat-Bold';
-    font-style: normal;
-    font-weight: 600;
-    src: url('Montserrat-Bold.otf') format('truetype');
+  font-family: 'Montserrat-Bold';
+  font-style: normal;
+  font-weight: 600;
+  src: url('Montserrat-Bold.otf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Montserrat-Medium';
-    font-style: normal;
-    font-weight: 500;
-    src: url('Montserrat-Medium.otf') format('truetype');
+  font-family: 'Montserrat-Medium';
+  font-style: normal;
+  font-weight: 500;
+  src: url('Montserrat-Medium.otf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Montserrat-Light';
-    font-style: normal;
-    font-weight: 300;
-    src: url('Montserrat-Light.otf') format('truetype');
+  font-family: 'Montserrat-Light';
+  font-style: normal;
+  font-weight: 300;
+  src: url('Montserrat-Light.otf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    src: url('Montserrat-Regular.otf') format('truetype');
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url('Montserrat-Regular.otf') format('truetype');
 }
 
-.accordion__title, .card-information .price .price-item, .product__title > * {
-    font-family: 'Montserrat-Medium', sans-serif !important;
+.accordion__title,
+.card-information .price .price-item,
+.product__title > * {
+  font-family: 'Montserrat-Medium', sans-serif !important;
 }
 
-.list-menu__item, .mega-menu__list--condensed .mega-menu__link, .header__icon:not(.header__icon--summary), .header__icon span, .announcement-bar__message p {
-    font-family: 'Montserrat', sans-serif !important;
+.list-menu__item,
+.mega-menu__list--condensed .mega-menu__link,
+.header__icon:not(.header__icon--summary),
+.header__icon span,
+.announcement-bar__message p {
+  font-family: 'Montserrat', sans-serif !important;
 }
 
-.rte p, .product-data-sizes .size,.card-has-color, .link, .customer a, .banner__box, .newsletter__policy label, .newsletter-form__button, .footer-block *, .icon-with-text-2 * {
-    font-family: 'Montserrat-Light', sans-serif !important;
+.rte p,
+.product-data-sizes .size,
+.card-has-color,
+.link,
+.customer a,
+.banner__box,
+.newsletter__policy label,
+.newsletter-form__button,
+.footer-block *,
+.icon-with-text-2 *,
+.collection-hero__description.rte * {
+  font-family: 'Montserrat-Light', sans-serif !important;
 }
 
 .footer-block__heading {
-    font-family: 'Montserrat-Bold', sans-serif !important;
+  font-family: 'Montserrat-Bold', sans-serif !important;
+}
+
+.list-menu__item.header__menu-item {
+  font-family: 'Montserrat', sans-serif !important;
 }
