--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -20,17 +20,20 @@
 
 .price .price-item {
   display: inline-block;
-  margin: 0 1rem 0 0;
+  margin: 0;
   font-size: 18px;
   font-weight: 500;
 }
 
 .card-information .price .price-item {
   font-size: 14px;
+  letter-spacing: 0;
+  font-weight: 500;
 }
 
 .price__regular .price-item--regular {
   margin-right: 0;
+  font-weight: bold;
 }
 
 .price:not(.price--show-badge) .price-item--last:last-of-type {
@@ -87,8 +90,6 @@
 
 .price--on-sale .price-item--regular {
   text-decoration: line-through;
-  color: rgba(var(--color-foreground), 0.75);
-  font-size: 1.3rem;
 }
 
 .unit-price {
